
   o BUG-FIX: U-matrix correctly output to shelx .res file [Annette Langkilde]

   o BUG-FIX: Environment Distances now can work to symmetry-related atoms 
     [David Briggs]

   o BUG-FIX: residues with inscodes are now correctly flashed when
     refining 

   o BUG-FIX: SHELXL .res molecules now generate ghosts correctly
     (given that NCS-related chains start at the "same" residue)

   o CHANGE: Temperature factor variance validation now works for SHELXL
     molecules [GMS, JED]

   o CHANGE: Map transformation now works differently.  Instead of providing
     the point from which the map is copied, one passes the target
     position to which the map should be copied (and the position from
     which the map is copied is calculated from this target position
     by the inverse transformation of the operator which moves the
     coordinates).  This seems more natural to me.

   o CHANGE: No longer a "stub" option in mutate and autofit [Stephen Sheriff]

   o CHANGE: Get Monomer checks for pre-calculated results before re-running.

   o CHANGE: Planar peptide restraints are ON by default now [Phil Evans]

   o CHANGE: Omega Distortion graph now updates on Accept Refine Zone

   o CHANGE: Moving the Rotate-Translate Y slider in the positve direction
     moves the fragment in the +Y direction on the screen (instead of 
     downwards) [Steven Sheriff]

   o CHANGE: Faster bonding of multiple model molecules [e.g. from NMR, Rapper]

   o CHANGE: Binaries no longer include include file and static library 
     "junk" [Clemens Vonrhein]
  
   o CHANGE: Extensions menu tided.

   o KNOWN PROBLEM: There may a be (is?) a problem in the sigmaa difference maps 
     from some .fcf files
    

    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------


Release 0.3.3 "The Early Bird Catches the Bugs"
